     Resource temporarily unavailable"), which can cause practical problems
     in the field -- the driver otherwise interpreted the situation as
     `ups.status` being `OL OFF` and cut the power supply.
   * powercom-hid subdriver: fixed `UPS.Battery.ManufacturerDate` to map
     to `battery.mfr.date` (not `battery.date` which is the maintenance
     replacement date) [#1644]

 - NUT for Windows:
   * Ability to build NUT for Windows, last tackled with a branch based on
     NUT v2.6.5 a decade ago, has been revived with the 2.8.x era codebase [#5].
     It is known that at this time some features are not complete, for more
     details see https://github.com/orgs/networkupstools/projects/2/views/1
   * Cross-builds of NUT for Windows using Linux and MinGW (and many custom
     built dependency packages, as documented in `scripts/Windows/README`)
     are now regularly tested on NUT CI farm with moderate integration via
     custom build script `scripts/Windows/build-mingw-nut.sh` [#1489]
   * Semi-native NUT for Windows builds with MSYS2/MinGW x64 environment are
     now regularly tested on AppVeyor, with the same `ci_build.sh` script and
     `Makefile` checks as used across the board for local developer builds,
     Linux/illumos/FreeBSD/OpenBSD/... on dedicated NUT CI farm on Fosshost,
     and MacOS on CircleCI [#1552]

 - snmp-ups updates:
   * Fixed detection for device agents which wrongly return the sysOID value
     as a string instead of an OID [#1710]
   * IETF MIB mapping updated for data points where negative readings
     are invalid [#1558]
   * Added SNMP subdriver "apc-epdu-mib" for APC easy PDU support [#1674]
   * Added SNMP subdriver "eaton-pdu-nlogic-mib" for nLogic (rebranded Eaton)
     support [#1698]
   * Added SNMP subdriver "hpe-pdu3-cis-mib" for HPE G2 Metered & Switched PDU
     initial "unitary" support (no daisychain support yet); also note that due
     to SNMP v1 implementation limitations on this device, you should prefer